// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLoadingKibana is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiLoadingKibana euiLoadingKibana--medium testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="euiLoadingKibana__icon"
  >
    <div
      data-euiicon-type="logoKibana"
    />
  </span>
</span>
`;

exports[`EuiLoadingKibana size l is rendered 1`] = `
<span
  class="euiLoadingKibana euiLoadingKibana--large"
>
  <span
    class="euiLoadingKibana__icon"
  >
    <div
      data-euiicon-type="logoKibana"
    />
  </span>
</span>
`;

exports[`EuiLoadingKibana size m is rendered 1`] = `
<span
  class="euiLoadingKibana euiLoadingKibana--medium"
>
  <span
    class="euiLoadingKibana__icon"
  >
    <div
      data-euiicon-type="logoKibana"
    />
  </span>
</span>
`;

exports[`EuiLoadingKibana size xl is rendered 1`] = `
<span
  class="euiLoadingKibana euiLoadingKibana--xLarge"
>
  <span
    class="euiLoadingKibana__icon"
  >
    <div
      data-euiicon-type="logoKibana"
    />
  </span>
</span>
`;
